@@ -1,3 +1,7 @@
+2010-01-21  Jie Zhang  <jie.zhang@analog.com>
+
+	* config/gdb-comm.exp (gdb_comm_load): Set breakpoints after load.
+
 2010-01-15  Anthony Green  <green@moxielogic.com>
 
 	* baseboards/moxie-sim.exp: New baseboard.
